feat: make curriculum routes course-aware
